syntax = "proto3";

package shared.v1;
option go_package = "github.com/studyguides-com/study-guides-api/api/v1/shared;sharedv1";

enum ContextType {
  Colleges = 0;
  Certifications = 1;
  EntranceExams = 2;
  APExams = 3;
  UserGeneratedContent = 4;
  DoD = 5;
  Encyclopedia = 6;
  All = 7;
}
